archive/cobbler-old/gateway-api/external-gateway.yml
apiVersion: v1
kind: Namespace
metadata:
  name: external-gateway
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external
  namespace: external-gateway
spec:
  gatewayClassName: cilium
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    hostname: "*.joshgordon.dev"
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            external-access: "true"
