archive/cobbler-old/gateway-api/internal-gateway.yml
apiVersion: v1
kind: Namespace
metadata:
  name: internal-gateway
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal
  namespace: internal-gateway
spec:
  gatewayClassName: cilium
  listeners:
  - name: https
    port: 443
    protocol: HTTPS
    hostname: "*.cobbler.gordns.net"
    allowedRoutes:
      namespaces:
        from: All
    tls:
      mode: Terminate
      certificateRefs:
        - name: cobbler-wildcard
  - name: http
    port: 80
    protocol: HTTP
    hostname: "*.cobbler.gordns.net"
#    allowedRoutes:
#      namespaces:
#        from: All
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: redirect-to-https
  namespace: internal-gateway
spec:
  parentRefs:
  - name: internal
    namespace: internal-gateway
    sectionName: http
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 302
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: test-nginx
  namespace: sandbox
spec:
  parentRefs:
  - name: internal
    namespace: internal-gateway
    sectionName: https
  hostnames:
    - test.cobbler.gordns.net
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: nginx
      port: 80
